--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 	<title>Különleges Macskák</title>
     <link rel="icon" type="image/png"  href="macska.jpg">
 
+<link rel="stylesheet" href="stilus.css">
+
+
+
 </head>
 <body>
+<a href="#scottish"> Scottish Fold</a>
+<a href="#savannah"> Savannah macska</a>
+<a href="#bengali"> Bengáli macska</a>
 
 <h1>Különleges Macskák</h1>
-
-	<h2> Scottish Fold</h2>
+	<h2 id="scottish"> Scottish Fold</h2>
 
 		<h3>Rövid leírás</h3>
 
@@ -31,7 +37,7 @@
 			</ul>
 			<img src="scottishfold.jpg" alt="Scottish Fold cica képe">
 	
-	<h2>Savannah macska</h2>
+	<h2 id="savannah"> Savannah macska</h2>
 		
 		<h3>Rövid leírás</h3>
 		
@@ -48,7 +54,7 @@
 				<li>Különlegesség: Szerváltól származik, ezért részben vadmacska-genetikát hordoz</li>
 			</ul>
 			<img src="savannah.jpg" alt="Savannah cica képe">
-	<h2>Bengáli macska</h2>
+	<h2 id="bengali"> Bengáli macska</h2>
 		
 		<h3>Rövid leírás</h3>
 			
@@ -64,7 +70,7 @@
 				<li>Természet: Aktív, intelligens</li>
 				<li>Különlegesség: Imádja a vizet és a játékokat</li>
 			</ul>
-			<img src="bengáli.jpg" alt="Bengáli cica képe">
+			<img src="bengali.jpg" alt="Bengáli cica képe">
 
 	
 </body>
